--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "cartao-aqui",
   "version": "0.0.0",
   "license": "MIT",
+  "engines": {
+    "node": "6.11.3"
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
