--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ng build --aot --target=production"
+    "postinstall": "ng build --aot --target=production",
+    "heroku-postbuild": "ng build --prod && npm start"
   },
   "private": true,
   "dependencies": {
